--- a/BZN-ember/bower.json
+++ b/BZN-ember/bower.json
@@ -12,5 +12,9 @@
     "ember-load-initializers": "stefanpenner/ember-load-initializers#0.0.2",
     "ember-qunit-notifications": "^0.0.3",
     "ember-cli-test-loader": "rjackson/ember-cli-test-loader#0.0.2"
+  },
+  "devDependencies": {
+    "bootstrap": "~3.2.0",
+    "ember-localstorage-adapter": "~0.3.2"
   }
 }
