Update ember-cli to v0.0.44

--- a/BZN-ember/.jshintrc
+++ b/BZN-ember/.jshintrc
@@ -2,7 +2,8 @@
   "predef": {
     "document": true,
     "window": true,
-    "BZNEmberENV": true
+    "-Promise": true,
+    "BznEmberENV": true
   },
   "browser" : true,
   "boss" : true,
