--- a/BZN-ember/package.json
+++ b/BZN-ember/package.json
@@ -28,6 +28,7 @@
     "ember-cli-inject-live-reload": "^1.0.2",
     "ember-cli-qunit": "0.1.0",
     "express": "^4.8.5",
+    "firebase-tools": "^1.1.2",
     "glob": "^4.0.5"
   }
 }
