--- a/.jshintrc
+++ b/.jshintrc
@@ -2,7 +2,8 @@
   "predef": {
     "document": true,
     "window": true,
-    "-Promise": true
+    "-Promise": true,
+    "Firebase": true
   },
   "browser" : true,
   "boss" : true,
