--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ember-cli-inject-live-reload": "^1.0.2",
     "ember-cli-qunit": "0.1.0",
     "ember-data": "1.0.0-beta.10",
+    "emberfire": "^1.2.5",
     "express": "^4.8.5",
     "firebase-tools": "^1.1.2",
     "glob": "^4.0.5"
